fix: static files

--- a/app/templates/base_nouser.html
+++ b/app/templates/base_nouser.html
@@ -18,7 +18,7 @@ html {
  margin-top:6em;
  text-align:center;
  min-height:500px;
- background:transparent url(server.svg) no-repeat left;
+ background:transparent url(static/server.svg) no-repeat left;
  background-size:362px 500px;
 }
 {% endblock %}
