--- a/app/templates/mobile_home.html
+++ b/app/templates/mobile_home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>
-	SpiffHub
+	DoormanHub
 	</title>
 
 	<meta charset="utf-8">
@@ -33,7 +33,7 @@
     <![endif]-->
 
     <script src="res/cookie.js"></script>
-    <script src="res/spiffhub.js"></script>
+    <script src="res/hub.js"></script>
     <script src="res/util.js"></script>
     <script src="res/pageindex.js"></script>
 
@@ -55,7 +55,7 @@
 <body>
 <script>
 $(document).ready(function(){
-var spiffhub = new SpiffHub('api');
+var hub = new DoormanHub('api');
 var epp = 25; // entries per page in list views.
 
 function on_error(status, msg) {
@@ -64,7 +64,7 @@ function on_error(status, msg) {
 
 $("#logout_button").click(
     function() {
-      spiffhub.logout(
+      hub.logout(
         function() {
           window.location.replace("/");
         },
@@ -77,7 +77,7 @@ var index = new PageIndex($("#pageindex"), '');
 index.set_entries_per_page(epp);
 
 function refresh_list(on_success) {
-  spiffhub.call('action/1.0/action/list',
+  hub.call('action/1.0/action/list',
                 {'limit': epp, 'offset': offset},
                 function(data) {
                     var len = data.list.length;
@@ -103,7 +103,7 @@ function addrow(action) {
         "</td>" +
       "</tr>");
   $("#result_table").find('tr').click(function() {
-    spiffhub.call('action/1.0/action/start',
+    hub.call('action/1.0/action/start',
                   {'id': action.id},
                   function(data) {
                   },
@@ -114,7 +114,7 @@ function addrow(action) {
 refresh_list();
 });
 </script>
-<h1>SpiffHub</h1>
+<h1>DoormanHub</h1>
 <table id="result_table">
 </table>
 </body>
